Adding examples from udemy course

--- a/code_examples/udemy-course-codes/index.html
+++ b/code_examples/udemy-course-codes/index.html
@@ -5,15 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        const number = prompt("What number to double?") // Input
-        let double = number * 2
-        alert(`The double is ${double}`)
-    </script>
 </head>
 
 <body>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
